[tool.poetry]
name = "gridlocked"
version = "0.1.0"
description = ""
authors = ["enertel <cgervais@enertel.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
autograd = "^1.3"
jupyter = "^1.0.0"
cvxpy = "^1.1.18"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
cvxopt = "^1.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
